# stm32-cmake-cpp

./: CMakeLists.txt  LICENSE  Makefile  README.md
remote/: gdbinit
src/: CMakeLists.txt  mainloop.cpp
src/stm32cube/: CMakeLists.txt  stm_config.cpp  stm_config.h  stm_interrupts.cpp
